--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-otp-input": "^2.4.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
